// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Public view should render children when they are present 1`] = `
<ContextProvider
  value={Array []}
>
  <div>
    <div>
      <div
        className="pho-content-header --no-icon --hide-bar"
      >
        <h2
          className="pho-content-title"
        />
        <div
          className="pho-toolbar"
          data-testid="pho-toolbar-album-public"
          role="toolbar"
        >
          <CozyHomeLink
            className="pho-public-mycozy"
            from=""
          />
          <Button
            align="center"
            className="pho-public-download"
            data-testid="album-public-download"
            icon={[Function]}
            label="Toolbar.album_download"
            onClick={[Function]}
            size="normal"
            tag="button"
            theme="secondary"
            type="submit"
          />
        </div>
      </div>
      <WithContentRect
        fetchMore={[MockFunction]}
        hasMore={false}
        lists={
          Array [
            Object {
              "photos": Array [
                1,
                2,
                3,
              ],
            },
          ]
        }
        onPhotoToggle={[Function]}
        onPhotosSelect={[Function]}
        onPhotosUnselect={[Function]}
        photosContext="timeline"
        selected={Array []}
        showSelection={false}
      />
      <Outlet />
    </div>
  </div>
</ContextProvider>
`;

exports[`Public view should render the album 1`] = `
<ContextProvider
  value={Array []}
>
  <div>
    <div>
      <div
        className="pho-content-header --no-icon --hide-bar"
      >
        <h2
          className="pho-content-title"
        />
        <div
          className="pho-toolbar"
          data-testid="pho-toolbar-album-public"
          role="toolbar"
        >
          <CozyHomeLink
            className="pho-public-mycozy"
            from=""
          />
          <Button
            align="center"
            className="pho-public-download"
            data-testid="album-public-download"
            icon={[Function]}
            label="Toolbar.album_download"
            onClick={[Function]}
            size="normal"
            tag="button"
            theme="secondary"
            type="submit"
          />
        </div>
      </div>
      <WithContentRect
        fetchMore={[MockFunction]}
        hasMore={false}
        lists={
          Array [
            Object {
              "photos": Array [],
            },
          ]
        }
        onPhotoToggle={[Function]}
        onPhotosSelect={[Function]}
        onPhotosUnselect={[Function]}
        photosContext="timeline"
        selected={Array []}
        showSelection={false}
      />
      <Outlet />
    </div>
  </div>
</ContextProvider>
`;
